spec/tests/error/error-2.5.tcl
# Test: errorInfo variable after error
catch {error "test error"}
puts "errorInfo exists: [info exists ::errorInfo]"
